First functional version of LED HTML interface!

--- a/browser/html/led.html
+++ b/browser/html/led.html
@@ -6,13 +6,17 @@
   <title>BitDogLab - Interfaces: LED RGB</title>
 </head>
 <body>
-  <a href="../index.html">Voltar</a>
+  <div class="header">
+    <a href="../index.html">Voltar</a>
+    | Status: <a id="serialconnectstatus">Desconectado</a> |
+    <button id="serialconnectbutton">Conectar</button>
+  </div>
   
   <hr>
 
   <div>
     <input id="ledcolorpicker" type="color">
-    <button>Enviar cor</button>
+    <button id="ledcolorsend">Enviar cor</button>
   </div>
   <script src="../js/serial.js"></script>
   <script src="../js/led.js"></script>
