--- a/browser/html/buzzer.html
+++ b/browser/html/buzzer.html
@@ -49,7 +49,11 @@
   </style>
 </head>
 <body>
-  <a href="../index.html">Voltar</a>
+  <div class="header">
+    <a href="../index.html">Voltar</a>
+    | Status: <a id="serialconnectstatus">Desconectado</a> |
+    <button id="serialconnectbutton">Conectar</button>
+  </div>
   <hr>
 
   <div class="container">
