First functional version of NeoPixel HTML interface!
Will add border to canvas.

--- a/browser/html/neopixel.html
+++ b/browser/html/neopixel.html
@@ -6,7 +6,11 @@
   <title>BitDogLab - Interfaces: NeoPixel</title>
 </head>
 <body>
-  <a href="../index.html">Voltar</a>
+  <div class="header">
+    <a href="../index.html">Voltar</a>
+    | Status: <a id="serialconnectstatus">Desconectado</a> |
+    <button id="serialconnectbutton">Conectar</button>
+  </div>
   <hr>
 
   <div>
