Added border, implemented luminosity on send.

--- a/browser/html/neopixel.html
+++ b/browser/html/neopixel.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BitDogLab - Interfaces: NeoPixel</title>
+  <style>
+#npcanvas {
+  border: 8px solid transparent;
+  border-image: linear-gradient(to bottom right, #ff0000 0%, #ff7f00 17%, #ffff00 33%, #00ff00 50%, #0000ff 67%, #4b0082 83%, #9400d3 100%);
+  border-image-slice: 1;
+}
+  </style>
 </head>
 <body>
   <div class="header">
