Added utils.js script to neopixel interface

--- a/browser/html/neopixel.html
+++ b/browser/html/neopixel.html
@@ -29,6 +29,7 @@
     <button id="npsend">Enviar cor</button>
   </div>
 
+  <script src="../js/utils.js"></script>
   <script src="../js/serial.js"></script>
   <script src="../js/neopixel.js"></script>
 </body>
