Atualização em massa
Finalizadas as interfaces:
- microfone
- botões
- joystick

Consertados bugs nas interfaces:
- OLED
- buzzer

Modificado o mecanismo de leitura pela porta serial.

--- a/browser/index.html
+++ b/browser/index.html
@@ -11,9 +11,12 @@
   <div>
     <h3>Interfaces</h3>
     <ul>
+      <li><a href="html/buttons.html">Botões</a></li>
       <li><a href="html/buzzer.html">Buzzers</a></li>
       <li><a href="html/oled.html">Display OLED</a></li>
+      <li><a href="html/joystick.html">Joystick</a></li>
       <li><a href="html/led.html">LED RGB</a></li>
+      <li><a href="html/microphone.html">Microfone</a></li>
       <li><a href="html/neopixel.html">NeoPixel</a></li>
     </ul>
   </div>
