Extremely basic terminal in HTML. Inspired by Jimi's first IDE in HTML.

--- a/browser/index.html
+++ b/browser/index.html
@@ -19,6 +19,8 @@
       <li><a href="html/microphone.html">Microfone</a></li>
       <li><a href="html/neopixel.html">NeoPixel</a></li>
     </ul>
+    <hr>
+    <a href="html/terminal.html">Acessar terminal</a>
   </div>
 </body>
 </html>
