--- a/browser/html/terminal.html
+++ b/browser/html/terminal.html
@@ -7,6 +7,13 @@
       background-color: #000;
       color: lightgreen;
       padding: 20px;
+      margin: 10px;
+    }
+    .output {
+      height: 16em;
+      line-height: 1em;
+      max-height: 16em;
+      overflow-y: scroll;
     }
     .input {
       margin-top: 10px;
@@ -15,6 +22,7 @@
       font-weight: bold;
     }
     #cmd {
+      width: calc(100% - 31pt);
       background: transparent;
       border: none;
       color: lightgreen;
@@ -33,6 +41,8 @@
   </div>
   
   <hr>
+
+  <button id="clear">Limpar terminal</button>
 
   <div class="terminal">
     <div class="output"></div>
