Made terminal css file
This makes it easier to have a terminal on every interface

--- a/browser/html/terminal.html
+++ b/browser/html/terminal.html
@@ -1,34 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-    .terminal {
-      font-family: monospace;
-      background-color: #000;
-      color: lightgreen;
-      padding: 20px;
-      margin: 10px;
-    }
-    .output {
-      height: 16em;
-      line-height: 1em;
-      max-height: 16em;
-      overflow-y: scroll;
-    }
-    .input {
-      margin-top: 10px;
-    }
-    #prompt {
-      font-weight: bold;
-    }
-    #cmd {
-      width: calc(100% - 31pt);
-      background: transparent;
-      border: none;
-      color: lightgreen;
-      outline: none;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="../css/terminal.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BitDogLab - Interfaces: LED RGB</title>
