--- a/browser/html/buzzer.html
+++ b/browser/html/buzzer.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BitDogLab - Interfaces: Buzzers</title>
+  <link rel="stylesheet" type="text/css" href="../css/terminal.css">
   <style>
 .piano-container {
   display: flex;
@@ -77,7 +78,19 @@
     </div>
   </div>
 
+  <hr>
+
+  <div class="terminal">
+    <div class="output"></div>
+    <hr>
+    <div class="input">
+      <span id="prompt">>>> </span>
+      <input type=text id="cmd" placeholder="Write here...">
+    </div>
+  </div>
+
   <script src="../js/serial.js"></script>
+  <script src="../js/terminal.js"></script>
   <script src="../js/buzzer.js"></script>
 </body>
 </html>
