--- a/browser/html/microphone.html
+++ b/browser/html/microphone.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BitDogLab - Interfaces: Microfone</title>
+  <link rel="stylesheet" type="text/css" href="../css/terminal.css">
   <style>
 #volume-meter {
   border: 4px solid transparent;
@@ -27,7 +28,19 @@
       <!-- <button id="stop">Stop</button> -->
       <!-- <button id="play">Play</button> -->
   </div>
+
+  <hr>
+
+  <div class="terminal">
+    <div class="output"></div>
+    <hr>
+    <div class="input">
+      <span id="prompt">>>> </span>
+      <input type=text id="cmd" placeholder="Write here...">
+    </div>
+  </div>
   <script src="../js/serial.js"></script>
+  <script src="../js/terminal.js"></script>
   <script src="../js/microphone.js"></script>
 </body>
 </html>
